--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 	<div class="header">
 		<div class="smaller">
-			<p>Start</p>
+			<span>Start</span>
 			<span>Middle</span>
-			<p>Teach</p>
+			<span>Teach</span>
 		</div>
 	</div>
 	<div class="main">
